--- a/class-07-tables-boxes/lecture/object-constructor-demo/index.html
+++ b/class-07-tables-boxes/lecture/object-constructor-demo/index.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <h1>Function Constructor </h1>
+    <p> Open the developer console inpect the ballard object</p>
   <script src="js/app.js" type="text/javascript"></script>
   </body>
 </html>
